--- a/src/css/movie.css
+++ b/src/css/movie.css
@@ -1,5 +1,1 @@
-@import "https://fonts.googleapis.com/icon?family=Material+Icons";
-
-.movie div {
-  justify-content: start;
-}
+/* @import "https://fonts.googleapis.com/icon?family=Material+Icons"; */
